--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,8 @@ html {
 
 body {
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-width: 320px;
+  min-height: 100vh; */
 }
 
 h1 {
@@ -41,6 +41,19 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.container {
+  max-width: 130rem;
+  padding: 0 3.2rem;
+}
+
+.d-grid {
+  display: grid;
+}
+
+.d-flex {
+  display: flex;
 }
 
 @media (prefers-color-scheme: light) {
